<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffFFF5F7"
    tools:context="ecnu.ireader.view_controller.IMainActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/book_icon"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textColor="#ff458994"
            android:textSize="28sp"
            android:gravity="center_vertical"/>
        <ImageButton
            android:layout_width="40dp"
            android:background="@android:color/transparent"
            android:layout_height="match_parent"
            android:id="@+id/main_setting_bt"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_settings_black_36dp"
            android:layout_weight="1.83" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:textColor="#ff458994"
        android:id="@+id/imain_title_time"/>

    <ListView
        android:background="@android:color/white"
        android:id="@+id/imain_daily_list"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_weight="1.76" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_weight="0.24"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/main_lib_bt"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bg"
                android:text="@string/library"
                android:textSize="20sp" />

            <Button
                android:id="@+id/main_dic_bt"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bg"
                android:text="@string/dictionary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_weight="0.24">
            <Button
                android:id="@+id/main_col_bt"
                android:text="@string/collection"
                android:textSize="20sp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:background="@drawable/round_corner_bg"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/main_cus_bt"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bg"
                android:text="@string/customize_read"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
